--- a/README
+++ b/README
@@ -5,14 +5,15 @@ You need to install Processing (http://processing.org/download/).
 You need to add GSVideo (http://gsvideo.sourceforge.net/).
 
 ==========Configuration==========
-You can set video folder and rss url in VideoPlusRSS.pde.
+You can set video folder in VideoPlusRSS.pde.
 See default values:
 
 //==============================================
 
 //Set you moovies folder
 String moviesFolder="/tmp/movies";
-//Set your RSS
-String feedurl="http://g1.globo.com/dynamo/tecnologia/rss2.xml";
 
 //==============================================
+
+
+URL Feeds can be set at: VideoPlusRSS/data/feeds.config
